--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,11 @@
     "angular-dragdrop": "^1.0.13",
     "bootstrap": "3",
     "angular-bootstrap": "^2.5.0",
-    "angular-esc-key": "^0.0.2"
+    "angular-esc-key": "^0.0.2",
+    "angular-ui-select": "^0.19.8",
+    "bootstrap-tokenfield": "^0.12.1",
+    "isteven-angular-multiselect": "^4.0.0",
+    "angular-translate": "^2.17.1",
+    "angular-sanitize": "^1.6.10"
   }
 }
